tests/lean/errmsg1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
λ x : ?M::0, x
λ x : ?M::0, x
errmsg1.lean:4:10: error: invalid expression, it still contains metavariables after elaboration
    λ x : ?M::0, x
    errmsg1.lean:4:10: error: unsolved metavar M::0
errmsg1.lean:5:11: error: failed to synthesize metavar M::0, it could not be synthesized by type inference and its type is not a proposition
    λ (A : Type) (x : A), ?M::0
    errmsg1.lean:6:3: error: unsolved metavar M::0
errmsg1.lean:8:0: error: failed to synthesize metavar M::1, it could not be synthesized by type inference and its type is not a proposition
    ∀ x : ?M::1, @eq ?M::1 x x
    errmsg1.lean:8:22: error: unsolved metavar M::1
